force-app/main/default/objects/Hire_Request__c/Hire_Request__c.object-meta.xml
<CustomObject>
    <description>Storage layer for the hiring and capacity needs flow. Each Field Manager submits Hire Requests when they identify a capacity gap. Records flow up to VP Field Operations and on to COO depending on request size.</description>
    <label>Hire Request</label>
    <nameField>
        <displayFormat>HR-{YYYY}-{0000}</displayFormat>
        <label>Hire Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hire Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>