force-app/main/default/objects/Hire_Request__c/fields/Annual_Cost_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cost_Per_Person__c</fullName>
    <label>Annual Cost Per Person</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>