force-app/main/default/objects/Hire_Request__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hire_Requests_Decision_By</relationshipName>
    <type>Lookup</type>
</CustomField>