force-app/main/default/objects/Hire_Request__c/fields/Driver_Communities__c.field-meta.xml
<CustomField>
    <fullName>Driver_Communities__c</fullName>
    <label>Driver Communities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>