force-app/main/default/objects/Hire_Request__c/fields/Hired_Date__c.field-meta.xml
<CustomField>
    <fullName>Hired_Date__c</fullName>
    <label>Hired Date</label>
    <type>Date</type>
</CustomField>