force-app/main/default/objects/Hire_Request__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>