force-app/main/default/objects/Hire_Request__c/fields/ROI_Pct__c.field-meta.xml
<CustomField>
    <fullName>ROI_Pct__c</fullName>
    <formula>IF(Total_Annual_Cost__c &gt; 0, (Y1_ROI__c / Total_Annual_Cost__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>