force-app/main/default/objects/Hire_Request__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreman</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
                <default>true</default>
                <label>Technician</label>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>