force-app/main/default/objects/Hire_Request__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landscape</fullName>
                <default>true</default>
                <label>Landscape</label>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>