force-app/main/default/objects/Hire_Request__c/fields/Submitted_By_FM__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By FM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hire_Requests_Submitted_By_FM</relationshipName>
    <type>Lookup</type>
</CustomField>