force-app/main/default/objects/Hire_Request__c/fields/Total_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Cost__c</fullName>
    <formula>Quantity__c * Annual_Cost_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>