force-app/main/default/objects/Hire_Request__c/fields/Y1_Revenue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Y1_Revenue_Capacity__c</fullName>
    <label>Y1 Revenue Capacity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>