force-app/main/default/objects/Hire_Request__c/fields/Y1_ROI__c.field-meta.xml
<CustomField>
    <fullName>Y1_ROI__c</fullName>
    <formula>Y1_Revenue_Capacity__c - Total_Annual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y1 ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>