force-app/main/default/objects/Hire_Request__c/validationRules/Decision_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Notes_Required</fullName>
    <active>true</active>
    <description>Decision notes required when not approved</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        OR(
            ISPICKVAL(Status__c, &quot;Denied&quot;),
            ISPICKVAL(Status__c, &quot;Deferred&quot;)
        ),
        ISBLANK(Decision_Notes__c)
    ))
)</errorConditionFormula>
    <errorDisplayField>Decision_Notes__c</errorDisplayField>
    <errorMessage>Decision notes required for non-approve outcomes</errorMessage>
</ValidationRule>