force-app/main/default/objects/Hire_Request__c/listViews/Hire_Request_Queue_Hire_Request.listView-meta.xml
<ListView>
    <fullName>Hire_Request_Queue_Hire_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Hire_Request_Queue</label>
    <queue>Hire_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>